<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aelf - Lectures du jour</string>
    
    <!-- Toolbar buttons -->
    <string name="action_calendar">Date</string>
    <string name="action_sync_settings">Paramètres</string>
    <string name="action_sync_do">Synchroniser maintenant</string>
    <string name="action_refresh">Actualiser</string>
    <string name="action_about">À propos</string>
    
    <!-- Dialogs -->
    <string name="dialog_about_title">À propos</string>
    <string name="dialog_about_content">Application <i>officieuse</i> \"AELF - lectures du jour (#VERSION#)\" développée avec le soutient d\'AELF. \
Textes issus de la traduction liturgique et logo reproduits avec l\'aimable autorisation de l\'AELF.\n\n\
Application par @Catho_Geek.\n\
Textes liturgiques © AELF (www.aelf.org)</string>
	
	<!-- Buttons -->
    <string name="button_ok">Valider</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_today">Auj.</string>

</resources>
