<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/action_calendar"
        android:orderInCategory="120"
        android:showAsAction="always"
        android:title="@string/action_calendar"/>
    <item
        android:id="@+id/action_sync_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_sync_settings"/>
    <item
        android:id="@+id/action_sync_do"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_sync_do"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="210"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
